--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,11 @@ test = [
     "pytest-mocker",
     "pyfakefs",
 ]
+dev = [
+    "ruff",
+    "pre-commit",
+]
+
 
 [tool.pytest.ini_options]
 pythonpath = [
