--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 aicli = ["themes/*"]
+"aicli.docs_src" = ["*.md"]
 
 [tool.coverage.run]
 omit = [
